tdf#107866 - Changing table column width with Alt+arrow key strokes is broken

regression from commit 890d6790715c4c3f3565b476d538643f04dc6936
"convert TableChgWidthHeightType to o3tl::typed_flags"

Change-Id: Ia1c3ec09d23ffe502dd8cb0ab673e45935bd4909